--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ buildscript {
 		liquidBaseVersion = '4.17.0'
 		snakeyamlVersion = '2.0'
 		thymeleafVersion = '3.2.2'
+		jakartaValidationApi = '3.0.2'
+		hibernateValidator = '8.0.0.Final'
+		springSession = '1.3.1.RELEASE'
+		springSecurity = '6.3.3'
 	}
 }
 
@@ -36,19 +40,32 @@ repositories {
 }
 
 dependencies {
+	// Podstawowe zależności
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation "org.projectlombok:lombok:${lombokVersion}"
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	testImplementation "org.spockframework:spock-spring:${spockVersion}"
+
+	// Baza danych i Liquibase
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.postgresql:postgresql'
 	implementation "org.liquibase:liquibase-core:${liquidBaseVersion}"
-	implementation "org.yaml:snakeyaml:${snakeyamlVersion}"
-	implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${thymeleafVersion}"
 
+	// Walidacja
+	implementation "jakarta.validation:jakarta.validation-api:${jakartaValidationApi}"
+	implementation "org.hibernate.validator:hibernate-validator:${hibernateValidator}"
+
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
+
+	// Servlet API (korzystaj z `jakarta.servlet-api`)
+	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+
+	// Testowanie
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation "org.spockframework:spock-spring:${spockVersion}"
 }
 
 tasks.named('test') {
