Improvement of frontend functionality regarding the operation of repetitions. Replacing the check for the logged-in user directly from the Spring context.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,4 @@ logging:
 
 spring:
   profiles:
-    active: local  # Aktywuje profil lokalny (dla lokalnej konfiguracji)
+    active: prod  # Aktywuje profil lokalny (dla lokalnej konfiguracji)
