save before new authorization and login

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update  # Automatyczne aktualizowanie schematu bazy danych
+server:
+  servlet:
+    session:
+      cookie:
+        secure: false
+        http-only: true
+        same-site: lax
