save before new authorization and login -changing to JWT

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation "org.spockframework:spock-spring:${spockVersion}"
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
 }
 
