--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,15 @@ dependencies {
 	// Servlet API (korzystaj z `jakarta.servlet-api`)
 	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 
+	implementation 'io.jsonwebtoken:jjwt:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 	// Testowanie
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
