--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
 	ext {
 		lombokVersion = '1.18.22'
-		spockVersion = '2.4-M4-groovy-4.0'
 		springBootVersion = '3.3.2'
 		springDependencyManagementVersion = '1.1.6'
 		liquidBaseVersion = '4.27.0'
@@ -9,7 +8,6 @@ buildscript {
 		thymeleafVersion = '3.2.2'
 		jakartaValidationApi = '3.0.2'
 		hibernateValidator = '8.0.0.Final'
-		springSession = '1.3.1.RELEASE'
 		springSecurity = '6.3.3'
 	}
 }
@@ -18,68 +16,107 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version "${springBootVersion}"
 	id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
+	id 'jacoco'
+}
+
+jacoco {
+	toolVersion = "0.8.12"
 }
 
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+version = ''
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
+	toolchain { languageVersion = JavaLanguageVersion.of(17) }
 }
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+	compileOnly { extendsFrom annotationProcessor }
 }
 
-repositories {
-	mavenCentral()
-}
+repositories { mavenCentral() }
 
 dependencies {
-	// Podstawowe zależności
+	// --- Spring
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.postgresql:postgresql'
+	implementation "org.liquibase:liquibase-core:${liquidBaseVersion}"
+
+	// --- Walidacja
+	implementation "jakarta.validation:jakarta.validation-api:${jakartaValidationApi}"
+	implementation "org.hibernate.validator:hibernate-validator:${hibernateValidator}"
+
+	// --- Lombok
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
 	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-	// Baza danych i Liquibase
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.postgresql:postgresql'
-	implementation "org.liquibase:liquibase-core:${liquidBaseVersion}"
+	// --- JJWT (spójnie 0.12.5)
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+	runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.12.5'
+	runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
-	// Walidacja
-	implementation "jakarta.validation:jakarta.validation-api:${jakartaValidationApi}"
-	implementation "org.hibernate.validator:hibernate-validator:${hibernateValidator}"
+	// --- Testy: JUnit 5 + Mockito + AssertJ (starter już to zawiera)
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		// wyłącz vintage/JUnit4
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 
-	// Spring Security
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.mockito:mockito-core:5.14.2'
+	testImplementation 'org.assertj:assertj-core:3.26.3'
 
-	// Servlet API (korzystaj z `jakarta.servlet-api`)
-	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
-
-	implementation 'io.jsonwebtoken:jjwt:0.12.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
-
-	// JWT
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
-	// Testowanie
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	testImplementation "org.spockframework:spock-spring:${spockVersion}"
-	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'org.testcontainers:postgresql'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		html.required = true
+		xml.required = true
+		csv.required = false
+	}
+	// ( wykluczenia z pokrycia:
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it, exclude: [
+					// konfiguracja/infrastruktura
+					'**/config/**',
+					'**/*Application*',
+					'**/*Config*',
+					'**/*Exception*',
+					// DTO/record/enums/mapper "głupie nośniki"
+					'**/*Dto*', '**/*Request*', '**/*Response*',
+					'**/*Record*', '**/*Mapper*',
+					// JPA/bezlogiczne encje
+					'**/domain/*Entity*', '**/domain/*$*',
+					// generowane i Lombok
+					'**/*$*$*', '**/*Builder*'
+			])
+		}))
+	}
+}
+
+// reguły jakości — build FAIL poniżej progu
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			limit {
+				counter = 'LINE'
+				value = 'COVEREDRATIO'
+				minimum = 0.60 // np. 60%
+			}
+		}
+
+	}
+}
+
+check.dependsOn jacocoTestCoverageVerification
